[package]
name = "qr"
version = "0.1.0"
edition = "2021"
authors = ["luomusha <luomusha@gmail.com>"]
description = "A simple QR code scanner"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
image = "0.25.0"
rqrr = "0.7.0"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlImageElement", "CanvasRenderingContext2d", "ImageData"] }
